--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street,<br>New York, NY 535022</p>
+                <p>First floor,N<br>New York, NY 535022</p>
               </div>
 
               <div class="email">
@@ -802,7 +802,7 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 94950 21926</p>
               </div>
 
             </div>
@@ -853,8 +853,9 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <a href="#header" class="scrollto footer-logo"><img src="assets/img/logo-wt.png" alt="" style="height: 100px;"></a>
-            <h3>Knight</h3>
-            <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+            <h3>Print and craft</h3>
+            <p>Thank you for choosing us! Explore creativity with our unique products and exceptional services designed for you.
+            </p>
           </div>
         </div>
 
