--- a/index.html
+++ b/index.html
@@ -790,19 +790,19 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>First floor,N<br>New York, NY 535022</p>
+                <p>CP Building Vadakkemanna<br>opp Kodur service co-bank,Malappuram</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>pacmappuram@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 94950 21926</p>
+                <p>+91 9037303347</p>
               </div>
 
             </div>
@@ -880,13 +880,13 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Knight</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Print and craft</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
+        Designed and developed by <a href="https://bootstrapmade.com/" target="_blank">Tecnavis</a>
       </div>
       <div class="credits">
-        Distributed by <a href="https://themewagon.com/" target="_blank">Themewagon</a>
+        <!-- Distributed by <a href="https://themewagon.com/" target="_blank">Themewagon</a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
