--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
             <div class="image">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/myphotos/photoframe.jpg" class="img-fluid" alt="">
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
@@ -164,7 +164,7 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
               </p>
             </div>
           </div>
-          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/services.jpg");' data-aos="fade-left" data-aos-delay="100"></div>
+          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/myphotos/mug\ image\ sq.jpg");' data-aos="fade-left" data-aos-delay="100"></div>
         </div>
 
       </div>
@@ -179,22 +179,22 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
             <div class="tab-content">
               <div class="tab-pane active show" id="tab-1">
                 <figure>
-                  <img src="assets/img/featured-1.png" alt="" class="img-fluid">
+                  <img src="assets/img/myphotos/sect001.webp" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-2">
                 <figure>
-                  <img src="assets/img/featured-2.png" alt="" class="img-fluid">
+                  <img src="assets/img/myphotos/sect002.webp" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-3">
                 <figure>
-                  <img src="assets/img/featured-3.png" alt="" class="img-fluid">
+                  <img src="assets/img/myphotos/sect001.webp" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-4">
                 <figure>
-                  <img src="assets/img/featured-4.png" alt="" class="img-fluid">
+                  <img src="assets/img/myphotos/sect002.webp" alt="" class="img-fluid">
                 </figure>
               </div>
             </div>
@@ -288,7 +288,7 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
 
           </div>
 
-          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch video-box" style='background-image: url("assets/img/why-us.jpg");' data-aos="zoom-in">
+          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch video-box" style='background-image: url("assets/img/myphotos/top-view-table-master-with-tools.jpg");' data-aos="zoom-in">
             <a href="https://www.youtube.com/watch?v=LIqQNG_q2us" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
