--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ We pride ourselves on delivering exceptional craftsmanship and personalized serv
           </div>
           <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/myphotos/mug\ image\ sq.jpg");' data-aos="fade-left" data-aos-delay="100"></div>
         </div>
-
+sdvbn
       </div>
     </section><!-- End Services Section -->
 
